{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 8,
  "lineage": "eb883db3-b307-0618-0a49-a7b05a1f3aec",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-077f084a219cc813e",
            "arn": "arn:aws:ec2:ap-south-2:104044935681:instance/i-0a8cf9e10d6b20307",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a8cf9e10d6b20307",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "devops terraform day7",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-07ce67f8ff594ee4e"
              }
            ],
            "primary_network_interface_id": "eni-07ce67f8ff594ee4e",
            "private_dns": "ip-10-0-1-111.ap-south-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.111",
            "public_ip": "18.60.45.252",
            "region": "ap-south-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-014abbf8d184b4566",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0290b309042e1918a",
            "tags": {
              "Name": "devops-lockin-practice-dev-ec2"
            },
            "tags_all": {
              "Name": "devops-lockin-practice-dev-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a95636f39f7af6df"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "10681",
            "id": "i-0a8cf9e10d6b20307",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_security_group.web_sg",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:104044935681:internet-gateway/igw-053031866f6376267",
            "id": "igw-053031866f6376267",
            "owner_id": "104044935681",
            "region": "ap-south-2",
            "tags": {
              "Name": "devops-lockin-practice-dev-igw"
            },
            "tags_all": {
              "Name": "devops-lockin-practice-dev-igw"
            },
            "vpc_id": "vpc-044b59f00b5cc3ad3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:104044935681:route-table/rtb-05ba24f7532a170ec",
            "id": "rtb-05ba24f7532a170ec",
            "owner_id": "104044935681",
            "propagating_vgws": [],
            "region": "ap-south-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-053031866f6376267",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops-lockin-practice-dev-rt"
            },
            "tags_all": {
              "Name": "devops-lockin-practice-dev-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-044b59f00b5cc3ad3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "1681",
            "id": "rtb-05ba24f7532a170ec",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eb21f888eaa18f97",
            "region": "ap-south-2",
            "route_table_id": "rtb-05ba24f7532a170ec",
            "subnet_id": "subnet-0290b309042e1918a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rt",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:104044935681:security-group/sg-0a95636f39f7af6df",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a95636f39f7af6df",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20260213105506400000000001",
            "name_prefix": "terraform-",
            "owner_id": "104044935681",
            "region": "ap-south-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops-lockin-practice-dev-web-sg"
            },
            "tags_all": {
              "Name": "devops-lockin-practice-dev-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-044b59f00b5cc3ad3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "15681",
            "id": "sg-0a95636f39f7af6df",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:104044935681:subnet/subnet-0290b309042e1918a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2a",
            "availability_zone_id": "aps2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0290b309042e1918a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "104044935681",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-2",
            "tags": {
              "Name": "devops-lockin-practice-dev-subnet"
            },
            "tags_all": {
              "Name": "devops-lockin-practice-dev-subnet"
            },
            "vpc_id": "vpc-044b59f00b5cc3ad3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "105681",
            "id": "subnet-0290b309042e1918a",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:104044935681:vpc/vpc-044b59f00b5cc3ad3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0276d858f05e524aa",
            "default_route_table_id": "rtb-037c235a791f1f6f0",
            "default_security_group_id": "sg-015ccae79eac441a8",
            "dhcp_options_id": "dopt-0d8dae9450f5b60ad",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-044b59f00b5cc3ad3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-037c235a791f1f6f0",
            "owner_id": "104044935681",
            "region": "ap-south-2",
            "tags": {
              "Name": "devops-lockin-practice-dev-vpc",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "devops-lockin-practice-dev-vpc",
              "environment": "dev"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "1081",
            "id": "vpc-044b59f00b5cc3ad3",
            "region": "ap-south-2"
          }
        }
      ]
    }
  ]
}